# proteinManager

./: .gitignore  CMakeLists.txt  README.md
app/compIntEnergy/: Makefile  compIntEnergy.hpp  compIntEnergyTest.cpp  potential.hpp
app/proteinCG/: Makefile  proteinCG.cpp  proteinCG.hpp  proteinCG_test.cpp
app/renumber/: Makefile
include/: atom.hpp  chain.hpp  compoundsProperties.hpp  dataTypes.hpp  model.hpp  proteinManager.hpp  residue.hpp  structure.hpp
include/proteinManager/: atom.hpp  chain.hpp  dataTypes.hpp  residue.hpp  structure.hpp
shared/: Makefile
src/: atom.cpp  chain.cpp  dataTypes.cpp  model.cpp  residue.cpp  structure.cpp
test/: Makefile  test  test.cpp
test/data/: 3apg.gro  3apg.pdbq  3apg.pdbqt  3apg.pqr  3apgP.pqr  3apgSCORPIO.pdbq  3apgSCORPIO.pdbqt
tools/KaranicolasBrooks/: KaranicolasBrooks.cpp  Makefile
tools/KaranicolasBrooksGO/: 1q0w.Qlist  1q0w.angle  1q0w.bond  1q0w.rep_GOBUILDER  1q0w.rep_GOBUILDER_fixrep  1q0w.wca  GO_1q0w.QdetailsClear  GO_gfp.QdetailsClear  GO_gfp.Qlist  KaranicolasBrooksGO.cpp  Makefile  gfp.Qlist  gfp.angle  gfp.bond  gfp.dieh  gfp.rep  gfp.rep_GOBUILDER  gfp.wca  mergeModels.cpp  vmdscene.dat.tga  vmdscene.ppm  vmdscene.tga
tools/RavikumarCG/: 3apg.sasa  3apgP.bond  3apgP.sasa  3apgP.top  BB.bond  BB.top  BarnaseBarstar.pqr  E9lm9.top  E9lm9S.bond  Makefile  RavikumarCG.cpp  a.out  a.top  kk  log
tools/SASA/: 1egl.freesasa  1egl.sasa  1egl.test  Makefile  SASA.hpp  sasaTest.cpp
tools/SOP/: Makefile  SOP.cpp  nativeContactSOP.hpp
tools/SOP_ContainerCargo/: Makefile  SOP_ContainerCargo.cpp  (+1 more)
(+266 files in other folders)
